
API changes from 3.1 to 3.2
---------------------------
- several helper APIs related to attribute setting (changeset d5f8e5fae1c6, 
  bug 234); old variants are currently deprecated API and will be removed
  in a future release
- remove references to Parameter in helper APIs (changeset 3cdd9d60f7c7,
  bug 232); old variants are currently deprecated API and will be removed
  in a future release
- New NetDevice APIs: SendFrom and SetPromiscRxCallback;

In order to support the learning bridge, some API changes in Node and
NetDevice were made.

In NetDevice, devices may optionally implement the virtual methods
SendFrom, SupportsPromiscuous, and SetPromiscReceiveCallback.  If
these new methods are not implemented, the code still compiles and
works, except if they are used in a BridgeNetDevice.

In Node, the signature for protocol handler callbacks (used in
AddProtocolHandler) has changed.  Now it looks like:

  void ReceiveFromDevice (Ptr<NetDevice> device, Ptr<Packet> packet, 
    uint16_t protocol, Address const &source, Address const &destination, 
    PacketType packetType);

The extra parameters 'destination' and 'packetType' are present for
all protocol handlers, but only have valid values for promiscuous
protocol handlers.  Protocol handlers are non-promiscuous by default,
so no action is needed to adapt existing code besides updating the
callback signature.

Release 3.1 (2008/06/30)
========================

The first ns-3 stable release
-----------------------------

This release is immediately available from:
http://www.nsnam.org/releases/ns-3.1.tar.bz2

We dedicate this initial ns-3 release to our late contributor and friend, 
Federico Maguolo.

What is ns-3 ?
--------------

ns-3 is a new discrete-event network simulator designed for supporting network
research and education. ns-3 features a solid, well documented C++ core and 
models for TCP/IP (IPv4), several link types including WiFi, and mobility 
models.
